# nira

./: .coverage  .flake8  .gitignore  GEMINI.md  LICENSE  README.md  alembic.ini  check.sh  mypy.ini  nira  pyproject.toml  pyrightconfig.json  requirements-dev.txt  ruff.toml  run_manual.py  write_i18n.py
.github/workflows/: ci.yml
nira_app/: __init__.py  cli.py  i18n.py  logging.py  markdown.py  models.py  router.py  services.py  storage.py  web.py
nira_app/cli/: __init__.py
nira_app/migrations/alembic/: env.py
nira_app/templates/: base.html  board_page.html  dashboard_page.html  error_page.html  list_filters.html  list_page.html  macros.html  new_ticket_page.html  related_item.html  rich_editor.html  settings_page.html  ticket_detail_page.html  ticket_table.html  ticket_table_empty_row.html  ticket_table_row.html
nira_app/templates/partials/: activity_feed.html  attachments.html  editor_autocomplete.html  related_tickets.html  sub_tasks.html  (+1 more)
tests/: conftest.py  test_cli_more.py  test_coverage_final.py  test_coverage_gap.py  test_i18n.py  test_integration.py  test_search_parsing.py  test_storage_coverage.py  test_unit.py
tests/cli/: test_cli_coverage.py  test_cli_errors.py
tests/i18n/: test_i18n.py
tests/integration/: test_cli_integration.py  test_http_integration.py  test_integration.py  test_migration_integration.py
tests/markdown/: test_markdown.py
tests/storage/: test_storage.py  test_storage_errors.py  test_storage_extra.py  test_storage_final.py  test_storage_more.py
tests/web/: test_web_coverage.py  test_web_errors.py  test_web_search.py
(+13 files in other folders)
