[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nira-app"
version = "0.1.0"
description = "A local issue tracker with a CLI and web UI."
readme = "README.md"
authors = [
    { name = "Evan d'Entremont", email = "evan.dentremont@aristocrat.com" },
]
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.48",
    "jinja2>=3.1.6",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.7",
    "mypy==1.19.1",
    "pyright==1.1.408",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
nira = "nira_app.cli:main"

[tool.pytest.ini_options]
addopts = "--cov=nira_app --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["nira_app/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.sdist]
include = ["nira_app"]

[tool.hatch.build.targets.wheel]
include = ["nira_app"]
